# my-linux

./: Makefile  README.md
.github/workflows/: makefile.yml
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.ts  style.css  v86.d.ts
matthieunux/: external.desc
matthieunux/board/browser_linux/: busybox.conf  linux.conf
matthieunux/board/browser_linux/browser_linux/: busybox.conf  linux.conf
matthieunux/board/browser_linux/browser_linux/rootfs_overlay/etc/: inittab
matthieunux/board/browser_linux/browser_linux/rootfs_overlay/root/: .profile
matthieunux/board/browser_linux/rootfs_overlay/etc/: motd
matthieunux/configs/: browser_linux_defconfig
networking_server/: Cargo.toml
networking_server/src/: main.rs
