[package]
name = "networking_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pdu = "1.1"
tokio = { version = "1.29.0", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3.28"
pretty_env_logger = "0.5.0"
warp = { version = "0.3.5", features = ["websocket", "tls"] }
tokio-tun = "0.9.0"